# ih-prep

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: example_diamonds.py
src/: bindings.cpp
src/ih_prep/: __init__.py  _core.cp312-win_amd64.pyd  core.py
src/ih_prep.egg-info/: SOURCES.txt  top_level.txt
tests/: test_basic.py
