[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ih-prep"
version = "0.1.0"
description = "Data preparation for information-theoretic analysis"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
#    "ih-lib @ git+https://github.com/AlGoldin87/ih-lib.git",
]

[project.urls]
Homepage = "https://github.com/AlGoldin87/ih-prep"
Repository = "https://github.com/AlGoldin87/ih-prep.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ih_prep*"]

[tool.setuptools.package-data]
"ih_prep" = ["py.typed"]